# QScss

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json
cmake/: QScssStyles.cmake
examples/widgets/: CMakeLists.txt  main.cpp  resources.qrc
include/QScss/: QtWidgetsStyleAdapter.h  StyleManager.h
scripts/: build-qss.mjs
src/: QtWidgetsStyleAdapter.cpp  StyleManager.cpp
styles/components/: _base.scss  _button.scss  _input.scss
styles/mixins/: _controls.scss
styles/themes/: dark.scss  light.scss
styles/tokens/: _theme.scss
